# yume

./: .gitmodules  Cargo.toml  README.md
shaders/: shader.wgsl
src/: cli.rs  imageview.rs  lib.rs  main.rs  playlist.rs
src/player/: mod.rs  playlist.rs
src/player/playlist/: handler.rs
src/player/renderer/: mod.rs  texture.rs
