[package]
name = "yume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
walkdir = "2"
winit = "0.26"
image = "0.24"
winit_input_helper = "0.11"
bytemuck = { version = "1.7", features = [ "derive" ] }
ultraviolet = "0.9"
wgpu = "0.12"
pollster = "0.2"
